cabal-version:       2.4

name:                FramesCookbook
version:             0.1.0.0
license:             NONE
author:                Matthias Meschede
                     , Dominic Steinitz
maintainer:          dominic@steinitz.org
extra-source-files:  CHANGELOG.md

executable FramesCookbook
  main-is:             vinyl.lhs
  other-modules:
  build-depends:       base
                     , Frames
                     , vinyl
                     , pretty-show
                     , turtle
                     , ghc-prim
                     , hourglass
                     , lens
                     , microlens
                     , singletons
                     , singletons-base
                     , singletons-th
                     , text
  default-language: Haskell2010